receptionist page updated

--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -1,6 +1,6 @@
 ---
 import Pricing from "../../landing/Pricing.astro";
-import LogoSlider from "../../global/LogoSlider.jsx";
+import LogoSlider from "../../global/slider/LogoSlider.jsx";
 import Testimonial from "./ProduuctTestimonials.astro";
 ---
 
